# ai-workspace

./: .env.example  .envrc  .gitignore  .gitmessage  .mcp.json  .rules  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES_DRAFT.md  USAGE.md  flake.nix  pyproject.toml  shell.nix
.git-hooks/: pre-commit
.github/workflows/: ci.yml
.pi/extensions/: instagram-transcriber.ts
.trash/: CURRENT_STATE_ANALYSIS.md  plan-fix-errors-warnings.md  progress.md
Development/: README.md
Knowledge-Base/: voxel-tycoon-modding-guide.md
Projects/: README.md
Projects/ai-workspace/: README.md
Projects/leilao-radar/: .env.example  ANEXO_OPERACIONAL.md  (+3 more)
Prompts/: 2026-07-03-parecer-lgpd-meia-entrada.md  2026-07-03-prompt-advogado-lgpd.md  2026-07-03-prompt-analista-negocio.md  2026-07-03-prompt-arquiteto-plano-acao.md  expert-review-shade-shell.md
References/: cv-review.md
Research/: aiw-tui-go-rust-planning.md  ways.md
Templates/: adr.md  code-review.md  feature-analysis.md  feature-plan.md  feature-ticket.md  idea.md  project.md  research.md  skill.md
analysis/: 2026-06-09-workspace-research-brief.md  2026-06-09-workspace-system-upgrade-design.md  2026-06-09-workspace-system-upgrade-plan.md  2026-07-03-adrs-d1-d2-d3.md  2026-07-03-adrs-d4-d5-d6-d7.md  2026-07-03-auditoria-cie-v3-3.md  2026-07-03-auditoria-seguranca-lgpd.md  2026-07-03-cie-v33-tecnico.md  2026-07-03-consolidacao-geral.md  2026-07-03-impacto-negocio-lgpd-cie.md  2026-07-03-pesquisa-eea-icp-brasil.md  2026-07-03-plano-acao-arquitetura.md  2026-07-03-resume-ate-fev-2026.md  2026-07-04-leilao-domain-decomposition.md  2026-07-04-web-exploration-integration-review.md  awesome-gtk-research-2026-06-19.md  dshell-capture-architecture.md  dshell-gnome-screenshot-comparison.md  external-projects-deep-analysis-2026-06-25.md  personal-usage-study.md  pi-harness-review.md  pi-setup-config-review-prompt.md  pi-setup-config-review.md  pi-setup-extension-review-prompt.md  pi-setup-extension-review.md  shade-shell-audit-2026-05-23.md
api/: __init__.py  main.py
docs/: ARCHITECTURE_V2_RESILIENT.md  BUDGET_ENFORCEMENT.md  BUILD_LOG.md  CONTEXT_SWITCH.md  CONTEXT_WORKBENCH.md  GAP_ANALYSIS_AIW_VS_PI.md  IMPROVEMENT_PLAN.md  INTEGRATION.md  PERMISSION_SYSTEM.md  PLANO_AIW_V2_VALIDADO.md  PLANO_ARQUITETURA.md  PLANO_CODING_AGENT.md  PLANO_FASE1_SOURCE_RANKING.md  PLANO_FASE2_LANGGRAPH.md  PLANO_FASE3_SCRAPING.md  PLANO_FASE5_TESTES_DEPLOY.md  POSITIONING.md  README.md  REQUIREMENTS_TUI_EXECUTION.md  REQUIREMENT_SEARCH_KNOWLEDGE_FORMAT.md  RESEARCH_MCP.md  SCHEMA_DB.md  SEMANTIC_CACHE.md  TUI_REDESIGN_v2.md  aiw-spec-v2.md  aiw-spec.md
memory/: conventions.md  learning-log.md  project-patterns.md
migrations/: 001_initial_schema.sql  002_semantic_cache.sql  003_rag_and_workflows.sql  004_job_queue_loops_worktrees.sql
nix/: home-manager-pi-setup.nix
notes/: analise-leiloes-operacao-solo.md  omniroute-setup.md  plano-operacao-solo-leiloes.md
pi-setup/: README-INSTALL.md  README.md  check-consistency.sh  deploy-pi-setup.sh  deploy.sh  harness-audit.sh  models-profile.json  settings-profile.json  skill-conflict-scanner.sh  validate.sh
projects/leilao-radar/: .gitignore  pyproject.toml
projects/leilao-radar/src/leilao_radar/: __init__.py  cli.py
projects/leilao-radar/src/leilao_radar/alerts/: __init__.py  telegram_bot.py
projects/leilao-radar/src/leilao_radar/analysis/: roi_calculator.py
projects/leilao-radar/src/leilao_radar/sources/: __init__.py  base.py  leilao_net.py  receita_federal_sle.py
projects/leilao-radar/src/leilao_radar/storage/: database.py
references/: README.md  git-aliases.md  graph-tools.md  markdown-cheatsheet.md  pi-commands.md
scripts/: aiw  aiw-worker-wrapper.sh  bootstrap.sh  dev-web.sh  download_cred1.py  pg-dev.sh  pi-context-analysis.py  pi-telemetry.py
tests/: conftest.py  test_cli_structure.py  test_minimal.py  test_plugin_system.py  test_queue.py  test_queue_extended.py  test_queue_property.py  test_tui_v3.py  test_worktree.py
tui/: go.mod  main.go
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+476 files in other folders)
