[project]
name = "ai-workspace"
version = "0.1.0"
description = "AI Workspace - Deep search, agent swarm, knowledge base, and task automation"
requires-python = ">=3.12"
dependencies = [
    # Agent swarm
    "crewai[tools]>=1.0",
    
    # Memory / knowledge
    "pgvector>=0.3.5",
    "psycopg2>=2.9.0",
    
    # Task scheduling & queue (Huey - lightweight, SQLite-backed)
    "huey>=2.5.0",
    
    # LLM clients
    "openai>=1.0.0",       # DeepSeek API (OpenAI-compatible)
    "ollama>=0.4.0",
    "httpx>=0.27.0",       # Kimi API calls
    
    # CLI
    "rich>=13.0.0",
    "typer>=0.12.0",
    "textual>=8.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Web scraping for deep search
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
aiw = "ai_workspace.cli:app"
aiw-mcp = "ai_workspace.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-timeout>=2.3",
    "pytest-textual-snapshot>=0.1",
    "faker>=25.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    # Not in nixpkgs yet — install via pip in dev shell
    "mem0ai>=0.1.0",
    "langtrace-python-sdk>=3.0.0",
    "credigraph>=0.4.0",
]
crewai = [
    "crewai-tools>=0.16.0",
]
mcp = [
    "mcp>=1.0.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=3.0.0",
]
postgres = [
    "psycopg2>=2.9.0",
]
dash = [
    "streamlit>=1.55.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]
scrape = [
    "crawl4ai>=0.8.9",
]
browser = [
    "browser-use>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
