[project]
name = "leilao-radar"
version = "0.1.0"
description = "Automated auction opportunity scanner for Brazilian government auctions"
authors = [{name = "Leilão Radar"}]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "selectolax>=0.3",
    "python-telegram-bot>=20.0",
    "pydantic>=2.0",
]

[project.scripts]
leilao-radar = "leilao_radar.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
